# Gudritis

./: README.md  package-lock.json  package.json  vite.config.ts
frontend/: README.md  package-lock.json
frontend/src/: app.html  hooks.server.ts
frontend/src/lib/: stores.ts
frontend/src/lib/components/: Answer.svelte  ViewingSlide.svelte
frontend/src/lib/models/: gameSession.ts  gameTemplate.ts  session.ts  user.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts
frontend/src/routes/[gameID]/: +page.server.ts  +page.svelte
frontend/src/routes/collection/: +page.server.ts  +page.svelte
frontend/src/routes/create/: +page.svelte
frontend/src/routes/search/: +page.server.ts
game_server/: Cargo.toml  README.md
game_server/src/: actors.rs  game.rs  lib.rs  main.rs
src/: app.d.ts  app.html  hooks.server.ts
src/lib/: db.ts  session.ts
src/lib/components/: Answer.svelte  PreviewModal.svelte  ViewingSlide.svelte
src/lib/components/Collection/: DropdownCollection.svelte  (+1 more)
src/lib/models/: gameSession.ts  gameTemplate.ts  session.ts  user.ts
src/lib/utils/: templateUtils.ts
src/lib/validation/: templateValidation.ts
src/models/: gameTemplate.ts  session.ts  user.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/[gameID]/: +page.server.ts  +page.svelte
src/routes/collection/: +page.svelte
src/routes/create/: +page.server.ts  +page.svelte
src/routes/search/: +page.server.ts  +page.svelte
src/routes/user/: +page.server.ts  +page.svelte
src/socket-server/: socket-server.ts
(+27 files in other folders)
