[package]
name = "gudritis_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"]}
futures-util = "0.3.30"
hyper = { version = "1.1.0", features = ["full"] }
mongodb = "2.8.0"
rand = "0.8.5"
redis = "0.24.0"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
